--- a/src/index.css
+++ b/src/index.css
@@ -160,6 +160,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 10px;
+  padding-bottom: 5%;
 }
 
 .message {
@@ -187,17 +188,40 @@ body {
   right: 0;
   width: 62%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  align-items: center;  
   padding: 10px;
-  background-color: #f0f0f0;
+  padding-right: 1%;
 }
+
+.input-container input {
+  width: calc(100% - 20px); 
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin-right: -1%;
+}
+
+.input-container button {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 0 15px 15px 0;
+  background-color: #000000;
+  cursor: pointer;
+}
+
+.input-container button img {
+  width: 25px; 
+  height: 25px; 
+}
+
 
 .conversation-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
   position: relative;
+  padding: 2%;
 }
 
 /** Responsive **/
