--- a/src/index.css
+++ b/src/index.css
@@ -188,13 +188,13 @@ body {
   right: 0;
   width: 62%;
   display: flex;
-  align-items: center;  
+  align-items: center;
   padding: 10px;
   padding-right: 1%;
 }
 
 .input-container input {
-  width: calc(100% - 20px); 
+  width: calc(100% - 20px);
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -211,10 +211,9 @@ body {
 }
 
 .input-container button img {
-  width: 25px; 
-  height: 25px; 
+  width: 25px;
+  height: 25px;
 }
-
 
 .conversation-container {
   display: flex;
@@ -222,6 +221,19 @@ body {
   height: 100vh;
   position: relative;
   padding: 2%;
+}
+.pdf-container {
+  width: 100vw; /* Set the width to 100% of the viewport width */
+  height: 100vh; /* Set the height to 100% of the viewport height */
+  overflow: hidden; /* Hide any potential overflow */
+  margin: 0; /* Remove margin to ensure the iframe covers the entire screen */
+  padding: 0; /* Remove padding to ensure the iframe covers the entire screen */
+}
+
+iframe {
+  width: 100%; /* Set the width of the iframe to 100% */
+  height: 100%; /* Set the height of the iframe to 100% */
+  border: none; /* Remove iframe border */
 }
 
 /** Responsive **/
