--- a/src/styles/querys.css
+++ b/src/styles/querys.css
@@ -12,8 +12,17 @@
 }
 @media screen and (max-width: 1024px) {
     .container-form {
+        min-height: 100vh; /* Asegura que tenga al menos la altura de la pantalla */
+        display: flex;
+        flex-direction: column; /* Hace que los hijos se alineen en columna */
+        justify-content: space-between; /* Espacia los elementos: contenido arriba, imagen abajo */
         background-image: none;
     }
+    .container-form {
+        position: relative; /* Esto es crítico para el posicionamiento absoluto de la imagen */
+    }
+    
+    
     .response-login-imagen{
         display: none;
     }
@@ -34,6 +43,8 @@
     }
     .response-login-form{
         width: 100%;
+    
+        
         
     }
     .response-login-form h1{
@@ -41,10 +52,10 @@
     }
     .fondo-celular-response{
         display: block;
-        position: absolute;
+      
         bottom: 0;
-        left: 0;
+  
         width: 100%; /* Ajusta el ancho como necesites */
-        height: auto; /* Mantiene la proporción de la imagen */
+       
     }
   }
